<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".NewsDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/MyAppBarLayoutTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <!--app:titleEnabled="false"-->
            <!-- app:statusBarScrim=""-->

            <ImageView
                android:id="@+id/newsBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/news_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="img"
                app:layout_collapseMode="parallax" />
            <!--app:layout_collapseParallaxMultiplier="0.7"-->

            <RelativeLayout
                android:id="@+id/headerContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:contentDescription="@string/top_shadow"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top_shadow" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/bottom_shadow"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bottom_shadow" />

            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">
                <!-- app:layout_scrollFlags="scroll|enterAlways"-->


                <LinearLayout
                    android:id="@+id/title_appbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_on_appbar"
                        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/news_for_you"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/subtitle_on_appbar"
                        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/subtitle"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/title_of_news"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_below="@id/title"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/a_time_ago" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="70dp" />

                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/date_behavior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_white"
        android:padding="5dp"
        app:layout_anchor="@+id/appbarlayout"
        app:layout_anchorGravity="right|end|bottom">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/date_image"
            android:src="@drawable/ic_date" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/_01_january_1990"
            android:textColor="#606060" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
